--- a/django_models/templates/infoProducto.html
+++ b/django_models/templates/infoProducto.html
@@ -10,7 +10,7 @@
             <div class="card col-12 col-md-4 offset-md-4 mt-4">
                 <div class="card-body">
                     {{ form | crispy }}
-                    {{mensaje}}
+                    {{error}}
                     <div class="d-flex justify-content-end">
                         <button type="submit" class="btn btn-success">GUARDAR</button>
                     </div>
