--- a/django_models/templates/registrosProd.html
+++ b/django_models/templates/registrosProd.html
@@ -1,5 +1,5 @@
 {% extends 'about.html' %}
-
+{% load humanize %}
 <main>
     {% block content %}
     <div class="container mt-5">
@@ -9,32 +9,34 @@
                     <th scope="col">ID PRODUCTO</th>
                     <th scope="col">NOMBRE</th>
                     <th scope="col">PRECIO</th>
-                    <th scope="col">DISPONIBILIDAD</th>
+                    <th scope="col">DISPONIBLE</th>
                     <th scope="col">ACCIONES</th>
                 </tr>
             </thead>
             <tbody>
 
-                {% for i in data %}
+                {% for i in entity %}
                 <tr class="">
                     <td scope="row">{{i.id}}</td>
                     <td>{{i.nombre}}</td>
-                    <td>{{i.precio}}</td>
-
+                    <td>$ {{i.precio | intcomma}}</td>
                     {% if i.disponibilidad %}
-                    <td>Disponible</td>
+                    <td>SI</td>
                     {% else %}
-                    <td>No disponible</td>
+                    <td>NO</td>
                     {% endif %}
 
                     <td>
-                        <a class="btn btn-primary" type="button"><i class="bi bi-pencil-square"></i></a>
-                        <a href="" class="btn btn-danger"><i class="bi bi-trash"></i></a>
+                        <a href="{% url 'edit_product' i.id %}" class="btn btn-primary" type="button"><i
+                                class="bi bi-pencil-square"></i></a>
+                        <a href="#" onclick="eliminarProducto({{i.id}})" class="btn btn-danger"><i class="bi bi-trash"></i></a>
                     </td>
                 </tr>
                 {% endfor %}
             </tbody>
         </table>
+        <div>{% include 'paginator.html' %}</div>
     </div>
+    
     {% endblock content %}
 </main>
